-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.626 2009-09-24 02:14:09 remko Exp $
-----------------------------------------------------------------------------------------

2009-09-24	remko
	* configure.ac:			Fixed bug with -rpath

2009-09-22	pwessel
	* misc/kml2gmt.c:		Attempt to parse feature description (if present in KML)
	* misc/gmt2kml.c:		Attempt to write feature description (if present in segment header)
	* mgd77/mgd77sniffer.c:		SEGV when an array index was allowed to become -1

-----------------------------------------------------------------------------------------
2009-09-20	pwessel
	* GMT 4.5.1 finalized and released
-----------------------------------------------------------------------------------------

2009-09-19	pwessel
	* psxy.c:		Added 4 new custom symbols (90-degree triangle in 4 quadrants)

2009-09-17	pwessel
	* x2sys/x2sys_get.c:	The -L option failed if list contained file extensions
2009-09-15	pwessel
	* x2sys/x2sys_solve.c:	Did not allocate array for weights.
	* pswiggle.c:		Incorrectly computed distances with -Jx<scale>d.

2009-09-13	pwessel
	* misc/gmt2kml.c:	Avoid mixing stdout/GMT_stdout as Windoze is Windoze.
	* misc/kml2gmt.c:	Avoid mixing stdout/GMT_stdout as Windoze is Windoze.

2009-09-12	pwessel
	* spotter:		Failed in 64-bit mode due to variable mismatch:
	* spotter/backtracker.c:	Needed GMT_LONG variables to be passed to GMT libs
	* spotter/hotspotter.c:		Needed GMT_LONG variables to be passed to GMT libs
	* spotter/originator.c:		Needed GMT_LONG variables to be passed to GMT libs
	
2009-09-11	remko
	* gmtdefaults_*.in:	Enter TRANSPARENCY = 0; replaced color triplets by names.
	* gmt_init.c:		Let gmtdefaults output TRANSPARENCY and print colors as names
				if available.
	* gmt_support.c:	Added GMT_getrgb_index to get index of preset RGB triplets.
	* gmt_{init,map.c}:	When using -JX, give width or height as 0 and it will adjust to