@@ -1,9 +1,12 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.626 2009-09-24 02:14:09 remko Exp $
+	$Id: ChangeLog,v 1.627 2009-09-24 08:09:34 guru Exp $
 -----------------------------------------------------------------------------------------
 
+2009-09-24	pwessel
+	* gmt_grdio.c:		GMT_read_img did not apply swab if little-endian arch.
+
 2009-09-24	remko
-	* configure.ac:			Fixed bug with -rpath
+	* configure.ac:		Fixed bug with -rpath
 
 2009-09-22	pwessel
 	* misc/kml2gmt.c:		Attempt to parse feature description (if present in KML)
